# infra-public-data-portal

./: .gitignore  .gitmodules  Dockerfile  README.md  dev-requirements.txt  requirements.in  requirements.txt
ckan-docker/: docker-compose.dev.yml
ckan-docker/nginx/: Dockerfile
ckan-scripts/: .env  compile_jsons.py  create_dataset.py  create_resource.py  delete.py  org_id.py  package_update.py  reviser.py  shabang.py  test.py  traverse_site.py  update_package.py
ckan-scripts/Covid19/: Average_values.csv
ckan-scripts/Mijente/: OCPF_Police_Individual.csv  OCPF_Police_Union.csv
ckan-scripts/PoliceArrestsS21/: cumulativeNIBRS.csv
ckan-scripts/RiskEvaluator/: IBB-Holdings.csv
ckan-scripts/StateSurplusS21/: parcel-geoData.csv
ckan-scripts/jsonf/: covid19.json  mijente.json  policeArrests.json  riskEvaluator.json  stateSurplus.json
ckan/i18n/: ckan.pot
ckan/views/: dashboard.py
ckanext-spark/: MANIFEST.in  README.md  main.css  setup.cfg  setup.py  test.ini
ckanext-spark/ckanext/spark/: cli.py  helpers.py  plugin.py  views.py
ckanext-spark/ckanext/spark/assets/: script.js  webassets.yml
ckanext-spark/ckanext/spark/logic/: action.py  auth.py  schema.py  validators.py
ckanext-spark/ckanext/spark/public/: spark-frtend.css
ckanext-spark/ckanext/spark/templates/: base.html
ckanext-spark/ckanext/spark/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext-spark/ckanext/spark/tests/logic/: test_action.py  test_auth.py  test_validators.py
contrib/docker/: docker-compose.yml
contrib/kubernetes/: ckan-manifest.yml  ckan-volume-manifest.yml
scripts/: uploading_script.py
scripts/create_package_params/: sampletest1.json  sampletest2.json  sampletest3.json  sampletest4.json  sampletest5.json  sampletest6.json
(+10 files in other folders)
