[metadata]
name = ckanext-spark
version = 0.0.1
description = CKAN re-theme for BU Spark!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BU-Spark/ckanext-spark
author = Kolade Adegbaye
author_email = koladea@bu.edu
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN theme spark bu

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             spark = ckanext.spark.plugin:SparkPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/spark/i18n/ckanext-spark.pot
width = 80

[init_catalog]
domain = ckanext-spark
input_file = ckanext/spark/i18n/ckanext-spark.pot
output_dir = ckanext/spark/i18n

[update_catalog]
domain = ckanext-spark
input_file = ckanext/spark/i18n/ckanext-spark.pot
output_dir = ckanext/spark/i18n
previous = true

[compile_catalog]
domain = ckanext-spark
directory = ckanext/spark/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
